--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,20 @@
 @import-normalize; /* bring in normalize.css styles */
 
+* {
+  font-size: 20px;
+}
+
+button {
+  margin-bottom: 15px;
+  margin-right: 15px;
+}
+
+.title {
+  font-size: 35px;
+  margin-bottom: 15px;
+}
+
 body {
-  margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
