--- a/src/index.css
+++ b/src/index.css
@@ -1,28 +1,23 @@
 @import-normalize; /* bring in normalize.css styles */
 
 * {
-  font-size: 20px;
+	font-size: 20px;
 }
 
 button {
-  margin-bottom: 15px;
-  margin-right: 15px;
-}
-
-.title {
-  font-size: 35px;
-  margin-bottom: 15px;
+	margin-bottom: 15px;
+	margin-right: 15px;
 }
 
 body {
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto',
+		'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans',
+		'Helvetica Neue', sans-serif;
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+	font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+		monospace;
 }
